@@ -4,3 +4,17 @@
 000048a4 00000000
 000048a8 00000000
 000048ac 00000000
+# Disable RC Invitation To Dark
+000046B0 00000000
+000046B4 00000000
+000046B8 00000000
+000046BC 00000000
+000046C0 00000000
+000046C4 74620000
+# Disable Warp Building Front
+000045E4 00000072
+000045E8 00000000
+000045EC 00000000
+000045F0 00000000
+000045F4 00000000
+000045F8 74610000
