@@ -5,3 +5,15 @@
 00004a14 00000000
 00004a18 00000000
 00004a1c 76720000
+# Disable Tower RC
+000048ec 0000006c
+000048f0 00000000
+000048f4 00000000
+000048f8 00000000
+000048fc 00000000
+00004900 00000000
+00004a60 00000000
+00004a64 00000000
+00004a68 00000000
+00004a6c 00000000
+00004a70 00000000
