@@ -6083,7 +6083,8 @@
         "name": "Armor Xemnas II",
         "enabled": true,
         "blacklist_source": [
-            "Axel I"
+            "Axel I",
+            "Saix"
         ],
         "enmp_index": 160,
         "tags": [
@@ -6148,7 +6149,6 @@
             "Pete OC II",
             "Prison Keeper",
             "Riku",
-            "Saix",
             "Sark",
             "Scar",
             "Seifer",
@@ -8426,7 +8426,9 @@
         "room_size": 14.0,
         "roommaxsize": 17.03,
         "blacklist_source": [
-            "Storm Rider"
+            "Storm Rider",
+            "Vexen",
+            "Lexaeus"
         ],
         "adds": [
             {
@@ -10938,12 +10940,14 @@
         "aimod": true,
         "enmp_index": 124,
         "hp": 100,
+        "tags": [
+            "needs_rc"
+        ],
         "level": 99,
         "pc": {
             "blacklist_source": [
                 "Pete OC II",
                 "Hades II",
-                "Past Pete",
                 "Blizzard Lord",
                 "Volcano Lord",
                 "Hades Cups",
@@ -10981,8 +10985,7 @@
         "replace_as": null,
         "source_replace_allowed": true,
         "msn_replace_allowed": true,
-        "tags": [],
-        "category": "",
+        "category": "needs_rc",
         "parent": "Grim Reaper II",
         "variationof": null,
         "children": [
@@ -11041,14 +11044,14 @@
         "enmp_index": 95,
         "hp": 100,
         "level": 99,
+        "blacklist_source": [
+            "Shan-Yu"
+        ],
         "limiter": 0,
         "tags": [
             "rc_blocked",
             "teleport_blocked",
             "solo"
-        ],
-        "blacklist_source": [
-            "Shan-Yu"
         ],
         "model": "B_LK120",
         "msn": "LK15_MS202",
@@ -11379,7 +11382,6 @@
             "Cerberus",
             "Cloud",
             "Grim Reaper I",
-            "Grim Reaper II",
             "Hades II",
             "Hayner",
             "Hercules",
@@ -13368,8 +13370,7 @@
             "Final Xemnas",
             "Dark Thorn",
             "Shadow Stalker",
-            "Storm Rider",
-            "Terra"
+            "Storm Rider"
         ],
         "enmp_index": 20,
         "hp": 100,
@@ -18580,7 +18581,8 @@
             "solo"
         ],
         "blacklist_source": [
-            "Shan-Yu"
+            "Shan-Yu",
+            "Dark Thorn"
         ],
         "hp": 100,
         "level": 99,
@@ -18630,7 +18632,6 @@
             "Blizzard Lord",
             "Cerberus",
             "Cloud",
-            "Dark Thorn",
             "Demyx",
             "Final Xemnas",
             "Grim Reaper I",
@@ -19538,7 +19539,9 @@
         "level": 99,
         "limiter": 0,
         "blacklist_source": [
-            "Demyx"
+            "Demyx",
+            "Vexen",
+            "Lexaeus"
         ],
         "model": "B_BB120",
         "msn": "BB05_MS104A",
@@ -20785,7 +20788,6 @@
             "Hayner",
             "Hercules",
             "Hostile Program",
-            "Hydra",
             "Larxene",
             "Leon",
             "Lexaeus",
